# 2D-Top-down-shooter

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GroepH  Makefile  Shooter.cbp  Shooter.sln  cmake_install.cmake  generate_list_of_headers_and_cpp.py
Debug/: Engine.lib  Game.exp  Game.ilk  Game.lib
Engine/: AnimatableObject.cpp  AnimatableObject.h  Animation.cpp  Animation.h  AnimationManager.cpp  AnimationManager.h  AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  Button.cpp  Button.h  CollidableObject.cpp  CustomDeleter.h  Engine.cpp  Engine.h  Engine.vcxproj  Engine.vcxproj.filters  Font.h  GameObject.cpp  InputManager.cpp  MapManager.cpp  MoveableObject.cpp  PhysicsManager.cpp  Point.cpp  QuadTree.cpp  QuadTree.h  RenderManager.cpp  RenderManager.h  SdlWrapper.h  TMXManager.cpp  TMXManager.h  Texture.h  TickerTime.cpp  Timer.cpp  Timer.h  UIElement.cpp  UIElement.h  UIIcon.cpp  UIIcon.h  (+6 more)
Engine/Debug/: Engine.idb
Engine/Debug/Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Engine/headers/: AssetManager.h  AudioManager.h  Bullet.h  Button.h  CollidableObject.h  Direction.h  Engine.h  Event.h  GameObject.h  InputManager.h  MapManager.h  MoveableObject.h  PhysicsManager.h  Point.h  RenderManager.h  TMXManager.h  Texture.h  TickerTime.h
Engine/tmx/include/: TMXParser.h  TSXParser.h
Engine/tmx/src/: TMXParser.cpp  TSXParser.cpp
Game/: AIBat.cpp  AIBat.h  AIDefault.cpp  AIDefault.h  AISpider.cpp  AISpider.h  Bullet.cpp  Button.cpp  Button.h  Config.h  CreditsState.cpp  CreditsState.h  EnemyBase.cpp  Explosion.cpp  Explosion.h  ExplosionFactory.cpp  ExplosionFactory.h  FactoryBehaviour.h  Flock.cpp  FlockController.cpp  Game.cpp  Game.h  Game.vcxproj  Game.vcxproj.filters  Handgun.cpp  Handgun.h  Helper.cpp  HighscoreState.cpp  HighscoreState.h  Hud.cpp  Hud.h  IAIBase.h  IHudComponent.h  InstructionsState.cpp  InstructionsState.h  Level.cpp  Level.h  Menu.cpp  Menu.h  MenuLoadState.cpp  (+32 more)
Game/PlayerState/: IdleState.cpp  IdleState.h  PlayerState.h
Game/headers/: Bullet.h  EnemyBase.h  Flock.h  FlockController.h  Helper.h  Player.h  Rifle.h  Uzi.h  Weapon.h
Game/monsters/: BatEnemy.cpp  BatEnemy.h  ZombieEnemy.cpp  ZombieEnemy.h
Game/powerups/: DropableFactory.cpp  DropableFactory.h  DropableObject.cpp  DropableObject.h  PowerupFastShot.cpp  PowerupFastShot.h  PowerupHP.cpp  PowerupHP.h  PowerupMode.cpp  PowerupMode.h  PowerupModeFastShot.cpp  PowerupModeFastShot.h
Shooter/: Shooter.vcxproj  main.cpp
Shooter/Debug/: vc141.idb
Shooter/Debug/Game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Game.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmake/: FindAppKit.cmake  FindBox2D.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  Findjson.cmake
content/: highscores.json  level1.json  level2.json  level3.json
content/config/: monsters.meta.json
content/map/: Map3.tmx  halflife.tmx  halflife.tsx  map3.tsx  space.tmx  space.tsx  tilemapje.tmx  tilesetje.tsx
content/saves/: SavedGame-3.json  hoi.json  quicksave.json
content/sprites/soldier/rifle/: _DS_Store
ide/visualstudio/: Topdown-shooter.sln
ide/visualstudio/Engine/: Engine.cpp  Engine.vcxproj  Engine.vcxproj.filters  packages.config
ide/visualstudio/Engine/audio/: AudioManager.cpp  AudioManager.h
ide/visualstudio/Topdown-shooter/: Topdown-shooter.vcxproj  Topdown-shooter.vcxproj.filters
source/: main.cpp
src/engine/headers/: AssetManager.h  AudioManager.h  Engine.h  assetsmanager.h  rendermanager.h
src/engine/source/: AssetManager.cpp  AudioManager.cpp  assetsmanager.cpp  rendermanager.cpp
src/engine/source/audio/: AudioManager.cpp  AudioManager.h
src/game/: main.cpp
